cmake_minimum_required(VERSION 3.2)
project(epitome-core)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#########################################################
# FIND GLUT
#########################################################
#find_package(GLUT REQUIRED)
include_directories(${GLUT_INCLUDE_DIRS})
link_directories(${GLUT_LIBRARY_DIRS})
#add_definitions(${GLUT_DEFINITIONS})
#########################################################
# FIND OPENGL
#########################################################
#find_package(OpenGL REQUIRED)
#include_directories(${OpenGL_INCLUDE_DIRS})
#link_directories(${OpenGL_LIBRARY_DIRS})
#add_definitions(${OpenGL_DEFINITIONS})
#########################################################

set(SOURCE_FILES
    ../assets/dll/Debug/x64/freeglut.dll
    ../assets/dll/Debug/x86/freeglut.dll
    ../assets/dll/Release/x64/freeglut.dll
    ../assets/dll/Release/x86/freeglut.dll
    ../assets/model/cube.obj
    src/EPITOME-CORE/error.cpp
    src/EPITOME-CORE/error.h
    src/EPITOME-CORE/init.cpp
    src/EPITOME-CORE/init.h
    src/EPITOME-CORE/system.cpp
    src/EPITOME-CORE/system.h
    src/epitome-core.h
    gcc_Debug.h
    gcc_Release.h
    ../include/opengl/assimp/Compiler/poppack1.h
    ../include/opengl/assimp/Compiler/pushpack1.h
    ../include/opengl/assimp/ai_assert.h
    ../include/opengl/assimp/anim.h
    ../include/opengl/assimp/camera.h
    ../include/opengl/assimp/cexport.h
    ../include/opengl/assimp/cfileio.h
    ../include/opengl/assimp/cimport.h
    ../include/opengl/assimp/color4.h
    ../include/opengl/assimp/config.h
    ../include/opengl/assimp/DefaultLogger.hpp
    ../include/opengl/assimp/defs.h
    ../include/opengl/assimp/Exporter.hpp
    ../include/opengl/assimp/Importer.hpp
    ../include/opengl/assimp/importerdesc.h
    ../include/opengl/assimp/IOStream.hpp
    ../include/opengl/assimp/IOSystem.hpp
    ../include/opengl/assimp/light.h
    ../include/opengl/assimp/Logger.hpp
    ../include/opengl/assimp/LogStream.hpp
    ../include/opengl/assimp/material.h
    ../include/opengl/assimp/matrix3x3.h
    ../include/opengl/assimp/matrix4x4.h
    ../include/opengl/assimp/mesh.h
    ../include/opengl/assimp/NullLogger.hpp
    ../include/opengl/assimp/postprocess.h
    ../include/opengl/assimp/ProgressHandler.hpp
    ../include/opengl/assimp/quaternion.h
    ../include/opengl/assimp/scene.h
    ../include/opengl/assimp/texture.h
    ../include/opengl/assimp/types.h
    ../include/opengl/assimp/vector2.h
    ../include/opengl/assimp/vector3.h
    ../include/opengl/assimp/version.h
    ../include/opengl/GL/freeglut.h
    ../include/opengl/GL/freeglut_ext.h
    ../include/opengl/GL/freeglut_std.h
    ../include/opengl/GL/glew.h
    ../include/opengl/GL/glut.h
    ../include/opengl/GL/glxew.h
    ../include/opengl/GL/wglew.h
    ../include/opengl/GLFW/glfw3.h
    ../include/opengl/GLFW/glfw3native.h
    ../include/opengl/ImageMagick-6/magick/accelerate.h
    ../include/opengl/ImageMagick-6/magick/animate-private.h
    ../include/opengl/ImageMagick-6/magick/animate.h
    ../include/opengl/ImageMagick-6/magick/annotate.h
    ../include/opengl/ImageMagick-6/magick/api.h
    ../include/opengl/ImageMagick-6/magick/artifact.h
    ../include/opengl/ImageMagick-6/magick/attribute.h
    ../include/opengl/ImageMagick-6/magick/blob-private.h
    ../include/opengl/ImageMagick-6/magick/blob.h
    ../include/opengl/ImageMagick-6/magick/cache-private.h
    ../include/opengl/ImageMagick-6/magick/cache-view.h
    ../include/opengl/ImageMagick-6/magick/cache.h
    ../include/opengl/ImageMagick-6/magick/channel.h
    ../include/opengl/ImageMagick-6/magick/cipher.h
    ../include/opengl/ImageMagick-6/magick/client.h
    ../include/opengl/ImageMagick-6/magick/coder.h
    ../include/opengl/ImageMagick-6/magick/color-private.h
    ../include/opengl/ImageMagick-6/magick/color.h
    ../include/opengl/ImageMagick-6/magick/colormap-private.h
    ../include/opengl/ImageMagick-6/magick/colormap.h
    ../include/opengl/ImageMagick-6/magick/colorspace-private.h
    ../include/opengl/ImageMagick-6/magick/colorspace.h
    ../include/opengl/ImageMagick-6/magick/compare.h
    ../include/opengl/ImageMagick-6/magick/composite-private.h
    ../include/opengl/ImageMagick-6/magick/composite.h
    ../include/opengl/ImageMagick-6/magick/compress.h
    ../include/opengl/ImageMagick-6/magick/configure.h
    ../include/opengl/ImageMagick-6/magick/constitute.h
    ../include/opengl/ImageMagick-6/magick/decorate.h
    ../include/opengl/ImageMagick-6/magick/delegate-private.h
    ../include/opengl/ImageMagick-6/magick/delegate.h
    ../include/opengl/ImageMagick-6/magick/deprecate.h
    ../include/opengl/ImageMagick-6/magick/display-private.h
    ../include/opengl/ImageMagick-6/magick/display.h
    ../include/opengl/ImageMagick-6/magick/distort.h
    ../include/opengl/ImageMagick-6/magick/draw-private.h
    ../include/opengl/ImageMagick-6/magick/draw.h
    ../include/opengl/ImageMagick-6/magick/effect.h
    ../include/opengl/ImageMagick-6/magick/enhance.h
    ../include/opengl/ImageMagick-6/magick/exception-private.h
    ../include/opengl/ImageMagick-6/magick/exception.h
    ../include/opengl/ImageMagick-6/magick/feature.h
    ../include/opengl/ImageMagick-6/magick/fourier.h
    ../include/opengl/ImageMagick-6/magick/fx-private.h
    ../include/opengl/ImageMagick-6/magick/fx.h
    ../include/opengl/ImageMagick-6/magick/gem.h
    ../include/opengl/ImageMagick-6/magick/geometry.h
    ../include/opengl/ImageMagick-6/magick/hashmap.h
    ../include/opengl/ImageMagick-6/magick/histogram.h
    ../include/opengl/ImageMagick-6/magick/identify.h
    ../include/opengl/ImageMagick-6/magick/image-private.h
    ../include/opengl/ImageMagick-6/magick/image-view.h
    ../include/opengl/ImageMagick-6/magick/image.h
    ../include/opengl/ImageMagick-6/magick/ImageMagick.h
    ../include/opengl/ImageMagick-6/magick/layer.h
    ../include/opengl/ImageMagick-6/magick/list.h
    ../include/opengl/ImageMagick-6/magick/locale_.h
    ../include/opengl/ImageMagick-6/magick/log.h
    ../include/opengl/ImageMagick-6/magick/mac.h
    ../include/opengl/ImageMagick-6/magick/magic.h
    ../include/opengl/ImageMagick-6/magick/magick-config.h
    ../include/opengl/ImageMagick-6/magick/magick-type.h
    ../include/opengl/ImageMagick-6/magick/magick.h
    ../include/opengl/ImageMagick-6/magick/MagickCore.h
    ../include/opengl/ImageMagick-6/magick/matrix.h
    ../include/opengl/ImageMagick-6/magick/memory-private.h
    ../include/opengl/ImageMagick-6/magick/memory_.h
    ../include/opengl/ImageMagick-6/magick/method-attribute.h
    ../include/opengl/ImageMagick-6/magick/methods.h
    ../include/opengl/ImageMagick-6/magick/mime-private.h
    ../include/opengl/ImageMagick-6/magick/mime.h
    ../include/opengl/ImageMagick-6/magick/module.h
    ../include/opengl/ImageMagick-6/magick/monitor-private.h
    ../include/opengl/ImageMagick-6/magick/monitor.h
    ../include/opengl/ImageMagick-6/magick/montage.h
    ../include/opengl/ImageMagick-6/magick/morphology-private.h
    ../include/opengl/ImageMagick-6/magick/morphology.h
    ../include/opengl/ImageMagick-6/magick/nt-base.h
    ../include/opengl/ImageMagick-6/magick/nt-feature.h
    ../include/opengl/ImageMagick-6/magick/option.h
    ../include/opengl/ImageMagick-6/magick/paint.h
    ../include/opengl/ImageMagick-6/magick/pixel-accessor.h
    ../include/opengl/ImageMagick-6/magick/pixel-private.h
    ../include/opengl/ImageMagick-6/magick/pixel.h
    ../include/opengl/ImageMagick-6/magick/policy.h
    ../include/opengl/ImageMagick-6/magick/prepress.h
    ../include/opengl/ImageMagick-6/magick/PreRvIcccm.h
    ../include/opengl/ImageMagick-6/magick/profile.h
    ../include/opengl/ImageMagick-6/magick/property.h
    ../include/opengl/ImageMagick-6/magick/quantize.h
    ../include/opengl/ImageMagick-6/magick/quantum-private.h
    ../include/opengl/ImageMagick-6/magick/quantum.h
    ../include/opengl/ImageMagick-6/magick/random-private.h
    ../include/opengl/ImageMagick-6/magick/random_.h
    ../include/opengl/ImageMagick-6/magick/registry.h
    ../include/opengl/ImageMagick-6/magick/resample-private.h
    ../include/opengl/ImageMagick-6/magick/resample.h
    ../include/opengl/ImageMagick-6/magick/resize-private.h
    ../include/opengl/ImageMagick-6/magick/resize.h
    ../include/opengl/ImageMagick-6/magick/resource_.h
    ../include/opengl/ImageMagick-6/magick/segment.h
    ../include/opengl/ImageMagick-6/magick/semaphore-private.h
    ../include/opengl/ImageMagick-6/magick/semaphore.h
    ../include/opengl/ImageMagick-6/magick/shear.h
    ../include/opengl/ImageMagick-6/magick/signature-private.h
    ../include/opengl/ImageMagick-6/magick/signature.h
    ../include/opengl/ImageMagick-6/magick/splay-tree.h
    ../include/opengl/ImageMagick-6/magick/static.h
    ../include/opengl/ImageMagick-6/magick/statistic.h
    ../include/opengl/ImageMagick-6/magick/stream-private.h
    ../include/opengl/ImageMagick-6/magick/stream.h
    ../include/opengl/ImageMagick-6/magick/string-private.h
    ../include/opengl/ImageMagick-6/magick/string_.h
    ../include/opengl/ImageMagick-6/magick/studio.h
    ../include/opengl/ImageMagick-6/magick/thread-private.h
    ../include/opengl/ImageMagick-6/magick/thread_.h
    ../include/opengl/ImageMagick-6/magick/threshold.h
    ../include/opengl/ImageMagick-6/magick/timer.h
    ../include/opengl/ImageMagick-6/magick/token-private.h
    ../include/opengl/ImageMagick-6/magick/token.h
    ../include/opengl/ImageMagick-6/magick/transform.h
    ../include/opengl/ImageMagick-6/magick/type.h
    ../include/opengl/ImageMagick-6/magick/utility-private.h
    ../include/opengl/ImageMagick-6/magick/utility.h
    ../include/opengl/ImageMagick-6/magick/version.h
    ../include/opengl/ImageMagick-6/magick/vms.h
    ../include/opengl/ImageMagick-6/magick/widget.h
    ../include/opengl/ImageMagick-6/magick/xml-tree.h
    ../include/opengl/ImageMagick-6/magick/xwindow-private.h
    ../include/opengl/ImageMagick-6/magick/xwindow.h
    ../include/opengl/ImageMagick-6/Magick++/Blob.h
    ../include/opengl/ImageMagick-6/Magick++/BlobRef.h
    ../include/opengl/ImageMagick-6/Magick++/CoderInfo.h
    ../include/opengl/ImageMagick-6/Magick++/Color.h
    ../include/opengl/ImageMagick-6/Magick++/Drawable.h
    ../include/opengl/ImageMagick-6/Magick++/Exception.h
    ../include/opengl/ImageMagick-6/Magick++/Functions.h
    ../include/opengl/ImageMagick-6/Magick++/Geometry.h
    ../include/opengl/ImageMagick-6/Magick++/Image.h
    ../include/opengl/ImageMagick-6/Magick++/ImageRef.h
    ../include/opengl/ImageMagick-6/Magick++/Include.h
    ../include/opengl/ImageMagick-6/Magick++/Montage.h
    ../include/opengl/ImageMagick-6/Magick++/Options.h
    ../include/opengl/ImageMagick-6/Magick++/Pixels.h
    ../include/opengl/ImageMagick-6/Magick++/STL.h
    ../include/opengl/ImageMagick-6/Magick++/Thread.h
    ../include/opengl/ImageMagick-6/Magick++/TypeMetric.h
    ../include/opengl/ImageMagick-6/wand/animate.h
    ../include/opengl/ImageMagick-6/wand/compare.h
    ../include/opengl/ImageMagick-6/wand/composite.h
    ../include/opengl/ImageMagick-6/wand/conjure.h
    ../include/opengl/ImageMagick-6/wand/convert.h
    ../include/opengl/ImageMagick-6/wand/deprecate.h
    ../include/opengl/ImageMagick-6/wand/display.h
    ../include/opengl/ImageMagick-6/wand/drawing-wand.h
    ../include/opengl/ImageMagick-6/wand/identify.h
    ../include/opengl/ImageMagick-6/wand/import.h
    ../include/opengl/ImageMagick-6/wand/magick-image.h
    ../include/opengl/ImageMagick-6/wand/magick-property.h
    ../include/opengl/ImageMagick-6/wand/magick-wand-private.h
    ../include/opengl/ImageMagick-6/wand/magick-wand.h
    ../include/opengl/ImageMagick-6/wand/magick_wand.h
    ../include/opengl/ImageMagick-6/wand/MagickWand.h
    ../include/opengl/ImageMagick-6/wand/method-attribute.h
    ../include/opengl/ImageMagick-6/wand/mogrify-private.h
    ../include/opengl/ImageMagick-6/wand/mogrify.h
    ../include/opengl/ImageMagick-6/wand/montage.h
    ../include/opengl/ImageMagick-6/wand/pixel-iterator.h
    ../include/opengl/ImageMagick-6/wand/pixel-wand-private.h
    ../include/opengl/ImageMagick-6/wand/pixel-wand.h
    ../include/opengl/ImageMagick-6/wand/stream.h
    ../include/opengl/ImageMagick-6/wand/studio.h
    ../include/opengl/ImageMagick-6/wand/wand-config.h
    ../include/opengl/ImageMagick-6/wand/wand-view.h
    ../include/opengl/ImageMagick-6/wand/wand.h
    ../include/opengl/ImageMagick-6/Magick++.h
    ../include/opengl/glfx.h
    ../include/opengl/ogldev_app.h
    ../include/opengl/ogldev_backend.h
    ../include/opengl/ogldev_basic_lighting.h
    ../include/opengl/ogldev_basic_mesh.h
    ../include/opengl/ogldev_callbacks.h
    ../include/opengl/ogldev_camera.h
    ../include/opengl/ogldev_cubemap_texture.h
    ../include/opengl/ogldev_engine_common.h
    ../include/opengl/ogldev_glfw_backend.h
    ../include/opengl/ogldev_glut_backend.h
    ../include/opengl/ogldev_io_buffer.h
    ../include/opengl/ogldev_keys.h
    ../include/opengl/ogldev_math_3d.h
    ../include/opengl/ogldev_pipeline.h
    ../include/opengl/ogldev_random_texture.h
    ../include/opengl/ogldev_skinned_mesh.h
    ../include/opengl/ogldev_texture.h
    ../include/opengl/ogldev_types.h
    ../include/opengl/ogldev_util.h
    ../include/opengl/technique.h
    ../lib/opengl/x64/freeglut.lib
    ../lib/opengl/assimp.lib
    ../lib/opengl/CORE_DB_Magick++_.lib
    ../lib/opengl/CORE_RL_Magick++_.lib
    ../lib/opengl/freeglut.lib
    ../lib/opengl/freeglutd.lib
    ../lib/opengl/glew32.lib
    ../lib/opengl/glew32mx.lib
    ../lib/opengl/glew32mxs.lib
    ../lib/opengl/glew32s.lib
    ../lib/opengl/glfw3.lib
    ../lib/opengl/glfw3dll.lib
    ../lib/opengl/glfx.lib
    ../lib/opengl/glfx_debug.lib
    ../lib/opengl/glfx_release.lib)

add_executable(Epitome3D ${SOURCE_FILES})

target_link_libraries(Epitome3D ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )